--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,6 +2,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "start": "node ./app.js"
+    "scripts": {
+      "start": "node server.js"
+    }
   }
+
+
 }
