--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "scripts": {
-      "start": "node server.js"
+      "start": "node app.js"
     }
   }
 
