--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,8 +2,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "scripts": {
-      "start": "node app.js"
+    "scripts": { 
+      "start": "node ./app.js"
     }
   }
 
