--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "scripts": { 
-      "start": "node ./app.js"
-    }
-  }
+    "express": "^4.17.1"
 
+  },
+  "scripts": { 
+    "start": "node ./app.js"
+  }
 
 }
